--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "openai-proxy",
   "version": "1.0.0",
-  "description": "Simple proxy for OpenAI API to bypass regional restrictions",
+  "description": "Proxy for OpenAI API and DuckDuckGo image search",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
@@ -9,7 +9,9 @@
   "keywords": [
     "openai",
     "proxy",
-    "express"
+    "express",
+    "duckduckgo",
+    "images"
   ],
   "author": "",
   "license": "ISC",
@@ -17,6 +19,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
-    "node-fetch": "^2.7.0"
+    "node-fetch": "^2.7.0",
+    "duckduckgo-images-api": "^1.0.3"
   }
 }
